<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterCreationFirstFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/name"
        style="@style/AppTheme.letters"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/name"
        ></EditText>

    <EditText
        android:id="@+id/strenght"
        style="@style/AppTheme.letters"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/fue"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/dexterity"
        style="@style/AppTheme.letters"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="120dp"
        android:hint="@string/des"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/constitution"
        style="@style/AppTheme.letters"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/con"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/intelligence"
        style="@style/AppTheme.letters"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="120dp"
        android:hint="@string/inte"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/power"
        style="@style/AppTheme.letters"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/pod"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/attention"
        style="@style/AppTheme.letters"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="120dp"
        android:hint="@string/ate"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/surname"
        style="@style/AppTheme.letters"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="right"
        android:hint="@string/surname"
        ></EditText>

    <EditText
        android:id="@+id/level"
        style="@style/AppTheme.letters"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="right"
        android:hint="@string/lvl_lower"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/money"
        style="@style/AppTheme.letters"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="right"
        android:hint="@string/money_lower"
        android:inputType="numberDecimal"
        ></EditText>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="253dp"/>

</FrameLayout>