<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterCreationSecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/AppTheme.letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SECUNDARIAS"
        android:textSize="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:id="@+id/s_strenght"
        style="@style/AppTheme.letters"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/strnght"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/s_dexterity"
        style="@style/AppTheme.letters"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="right"
        android:layout_marginRight="50dp"
        android:hint="@string/dexterity"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/s_attention"
        style="@style/AppTheme.letters"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/attention"
        android:inputType="number"
        ></EditText>

    <EditText
        android:id="@+id/s_intelligence"
        style="@style/AppTheme.letters"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_gravity="right"
        android:layout_marginRight="50dp"
        android:hint="@string/inteligence"
        android:inputType="number"
        ></EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center|top"
        android:layout_marginTop="253dp"/>

</FrameLayout>